--- a/api/.env.example
+++ b/api/.env.example
@@ -10,6 +10,11 @@ POSTGRES_DB=pd2_tools
 POSTGRES_USER=pd2_user
 POSTGRES_PASSWORD=password
 
+# Redis Configuration (for caching)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
 # Season Configuration (for default)
 CURRENT_SEASON=12
 
