--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "node-cron": "^4.2.1",
     "node-fetch": "2.7.0",
     "pg": "^8.16.0",
+    "redis": "^4.7.0",
     "socket.io-client": "2.5.0"
   },
   "devDependencies": {
