--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@mantine/hooks": "7.14.2",
     "@tabler/icons-react": "3.22.0",
     "@tanstack/react-query": "5.61.3",
+    "@types/react-window": "^1.8.8",
     "@yaireo/relative-time": "1.0.5",
     "js-cookie": "^3.0.5",
     "lodash": "4.17.21",
@@ -25,6 +26,7 @@
     "react-dom": "18.3.1",
     "react-helmet": "6.1.0",
     "react-router-dom": "7.0.1",
+    "react-window": "^2.2.4",
     "recharts": "2.15.0",
     "usehooks-ts": "^3.1.1"
   },
